[package]
name = "take-until"
version = "0.1.0"
authors = ["Hannes De Valkeneer <hannes@de-valkeneer.be>"]
edition = "2018"
license = "MIT"
description = "A take until extension for iterators"
homepage = "https://github.com/hdevalke/take-until"
repository = "https://github.com/hdevalke/take-until.git"
keywords = ["iterator", "take", "until"]

[dependencies]
